2004-07-13  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* lib/rubygems/cmd_manager.rb: added 'unpack' command.

	* lib/rubygems/gem_commands.rb (UnpackCommand): added.

	* lib/rubygems/installer.rb (Installer#unpack): added.

2004-07-09  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/user_interaction.rb (Gem::StreamUI::ask and
	Gem::StreamUI::choose_from_list): Added flush before each gets.

2004-07-05  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* lib/rubygems/command.rb (Gem::Command#defaults_str): added.

	* lib/rubygems/command.rb (Gem::Command#create_option_parser):
	  Defaults for the options are included in the parser output.

	* lib/rubygems/gem_commands.rb: all commands which have options
	  and defaults now have #defaults_str implemented.

2004-07-05  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/command.rb (Gem::Command#create_option_parser):
	Make the argument and option sections optional.  They are only
	printed if there are options or arguments defined.

2004-07-05  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* lib/rubygems/gem_commands.rb:
	  - scrubbed up the 'help' command a bit, removing its options
	  - added information to 'help commands'

2004-07-04  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* lib/rubygems/gem_commands.rb:
	  - modified generic help and examples
	  - improved 'list' and 'search' help, and fixed bug in 'search'

	* lib/rubygems/cmd_manager.rb: 
	  - explicit support for top-level commands --help and --version
	  - no more support for --examples and --commands

2004-07-04  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* lib/rubygems/gem_commands.rb:
	  - added 'list' and 'search' commands ('list' is no longer an alias
	    for 'query')
	  - modified return value from all 'arguments' methods (see command.rb)

	* lib/rubygems/cmd_manager.rb: added 'search' command.

	* lib/rubygems/command.rb:
	    (Command#create_option_parser): enhanced the option parser for 'help'